# servant-example

./: .gitignore  .gitmodules  README.md  cabal.project
backend/: README.md  backend.cabal  config.cfg.example
backend/app/: Main.hs  OptionsParser.hs
backend/db/: schema.sql
backend/db/migrations/: 20211028212132_create_users_table.sql
backend/migrate/: Main.hs  OptionsParser.hs
backend/src/: Backend.hs
backend/src/Backend/: AppM.hs  Auth.hs  Common.hs  Config.hs  KeyError.hs  Response.hs
backend/src/Backend/AppM/: Logger.hs  LoggerContext.hs  Monad.hs  Session.hs  Validation.hs
backend/src/Backend/Auth/: AuthContext.hs
backend/src/Backend/Proof/: Named.hs
backend/src/Backend/User/: Handler.hs  Model.hs  Statements.hs  Validation.hs
backend/tests/: TimeFreezeM.hs
backend/tests/Controllers/: AuthSpec.hs  Helper.hs  UserSpec.hs
backend/tests/Factories/: User.hs
jwt/: LICENSE  README.md  jwt.cabal
jwt/src/Crypto/Auth/: JWT.hs
jwt/tests/: Main.hs
